--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -122,7 +122,7 @@ img.feedicon {
 /* Structure */
 .header {
   width: 100%;
-  position: fixed;
+  position: sticky;
   top: 0px;
   background-color: rgba(232, 235, 235, 0.8);
   padding: 0em;
